Retornar id usuario
