# app/serializers/user_serializer.rb
@@ -1,3 +1,3 @@
 class UserSerializer < ActiveModel::Serializer
-   attributes :name, :provider, :uid, :age, :gender, :email, :picture
+   attributes :id ,:name, :provider, :uid, :age, :gender, :email, :picture
 end
